openmediavault (6.3.11-1) stable; urgency=low

  * Upgrade Salt to version 3005.1.

 -- Volker Theile <volker.theile@openmediavault.org> Tue, 25 Apr 2023 19:09:12 +0200

openmediavault (6.3.10-2) stable; urgency=low

  * Issue #1537: `findmnt` is using tree-like output on some systems
    which breaks the parsing of the content.
  * Enhance the UDEV rules to workaround the duplicate serial number
    bug of various disk enclosures. Now the `disk/by-uuid` symlinks
    are created as well if a file system UUID exists.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 22 Apr 2023 10:03:02 +0200

openmediavault (6.3.9-1) stable; urgency=low

  * Add the environment variable `OMV_BTRFS_SCRUB_PERIOD`. The supported
    values are `weekly` and `monthly`. Defaults to `monthly`.
  * Relocate the Cron Btrfs scrubbing script into a separate CLI tool
    named `omv-btrfs-scrub`. If you need to run the scrub jobs at a
    certain date, you may disable the built-in cron jobs via the
    environment variable `OMV_BTRFS_SCRUB_ENABLED`. Finally, create
    your custom scheduled tasks via the UI by typing `omv-btrfs-scrub` in
    the `Command` form field.
  * Add UDEV rule to fix the duplicate serial number issue on Qnap
    TR-004 devices.
  * Perform scheduled Btrfs scrub and scan tasks on file system mount
    points rather than devices.
  * Fix `hdparm` configuration. Use `force_spindown_time` to apply settings
    to non-APM devices.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Apr 2023 16:44:59 +0200

openmediavault (6.3.8-1) stable; urgency=low

  * Update locale files.
  * Issue #1528: Fix the error `The "constraint" or "deps" property
    is required`.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 04 Apr 2023 22:51:27 +0200

openmediavault (6.3.7-5) stable; urgency=low

  * Update locale files.
  * Improve `omv-env list` command. The directories `/etc/cron.*`
    will be parsed for environment variables as well now.