@@ -45,6 +45,9 @@ inherit acls = {{ share.inheritacls | to_bool | yesno }}
 inherit permissions = {{ share.inheritpermissions | to_bool | yesno }}
 ea support = {{ share.easupport | to_bool | yesno }}
 store dos attributes = {{ share.storedosattributes | to_bool | yesno }}
+{%- if share.transportencryption | to_bool %}
+server smb encrypt = required
+{%- endif %}
 {%- set vfs_objects = vfs_objects.split(' ') %}
 {%- if share.audit | to_bool %}
 {%- set _ = vfs_objects.append('full_audit') %}
