@@ -143,6 +143,10 @@
 								"type": "boolean",
 								"default": false
 							},
+							"transportencryption": {
+								"type": "boolean",
+								"default": false
+							},
 							"extraoptions": {
 								"type": "string"
 							}
